After refactoring aspected 0 smell, evaluation works for openjpa currently working for result on bookkeeper